tests/NormalTests/paczka1/fuzzy1/85783229.err
Error in line 2: DkKn S800 89,1
Error in line 8: ktv,FBM S800 87,5
Error in line 18: ktvqFBM A785 27,2
Error in line 27: 9hxionnNC A785 95ú4
Error in line 25: 9hxionnNC A319 58,6
Error in line 29: 9hxionnNC A785 168,9
Error in line 31: 9hxionnNC A319 69,6
